调整生成代码的风格